Fix white space underneath game canvas

--- a/src/client/app/home/level/level.component.scss
+++ b/src/client/app/home/level/level.component.scss
@@ -7,6 +7,7 @@ canvas {
 	width: 100%;
 	height: 100%;
 	touch-action: none;
+	vertical-align: bottom;
 }
 
 .toolbar {
